<resources>
    <string name="app_name">Calc2 </string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_4">4</string>
    <string name="multiple">*</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="c">C</string>
    <string name="divide">/</string>
    <string name="calc">=</string>
    <string name="dot">.</string>
    <string name="choose">Choose</string>
    <string name="cancel">cancel</string>
    <string name="ChooseThemeTextView">Choose theme for Calculator:</string>
    <string name="lightThemeRadioButtonText">Light Theme</string>
    <string name="darkThemeRadioButtonText">Dark Theme</string>
    <string name="ch">ch</string>
</resources>