<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radioGroupThemeButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/chooseThemeTextSize"
            android:text="@string/ChooseThemeTextView" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonLightTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/lightThemeRadioButtonText" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonDarkTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/darkThemeRadioButtonText"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonChooseTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/numericButtonMargin"
            android:text="@string/choose" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/numericButtonMargin"
            android:text="@string/cancel" />

    </LinearLayout>
</LinearLayout>
