<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        android:layout_width="@dimen/numericButtonWidth"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/numericButtonMargin"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputCurrent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="@dimen/numericButtonWidth"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/numericButtonMargin"
        android:text="@string/_2"
        app:layout_constraintBottom_toBottomOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toTopOf="@+id/button1"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        android:layout_width="@dimen/numericButtonWidth"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/numericButtonMargin"
        android:text="@string/_3"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/buttonPlus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonPlus"
        android:layout_width="@dimen/numericButtonWidth"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/numericButtonMargin"
        android:text="@string/plus"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button3"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button4"
        android:layout_width="@dimen/numericButtonWidth"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/numericButtonMargin"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button5"
        android:layout_width="@dimen/numericButtonWidth"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/numericButtonMargin"
        android:text="@string/_5"
        app:layout_constraintBottom_toBottomOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toTopOf="@+id/button4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button6"
        android:layout_width="@dimen/numericButtonWidth"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/numericButtonMargin"
        android:text="@string/_6"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/buttonMultiple"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/button5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMultiple"
        android:layout_width="@dimen/numericButtonWidth"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/numericButtonMargin"
        android:text="@string/multiple"
        app:layout_constraintBottom_toBottomOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toTopOf="@+id/button6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button7"
        android:layout_width="@dimen/numericButtonWidth"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/numericButtonMargin"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button8"
        android:layout_width="@dimen/numericButtonWidth"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/numericButtonMargin"
        android:text="@string/_8"
        app:layout_constraintBottom_toBottomOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toTopOf="@+id/button7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button9"
        android:layout_width="@dimen/numericButtonWidth"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/numericButtonMargin"
        android:text="@string/_9"
        app:layout_constraintBottom_toBottomOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/buttonMinus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toTopOf="@+id/button8" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMinus"
        android:layout_width="@dimen/numericButtonWidth"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/numericButtonMargin"
        android:text="@string/minus"
        app:layout_constraintBottom_toBottomOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toTopOf="@+id/button9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button0"
        android:layout_width="@dimen/numericButtonWidth"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/numericButtonMargin"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/calc"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calc"
        android:layout_width="@dimen/numericButtonWidth"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/numericButtonMargin"
        android:text="@string/calc"
        app:layout_constraintBottom_toBottomOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/clear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toTopOf="@+id/button0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear"
        android:layout_width="@dimen/numericButtonWidth"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/numericButtonMargin"
        android:text="@string/c"
        app:layout_constraintBottom_toBottomOf="@+id/calc"
        app:layout_constraintEnd_toStartOf="@+id/divide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/calc"
        app:layout_constraintTop_toTopOf="@+id/calc" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/divide"
        android:layout_width="@dimen/numericButtonWidth"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/numericButtonMargin"
        android:text="@string/divide"
        app:layout_constraintBottom_toBottomOf="@+id/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/clear"
        app:layout_constraintTop_toTopOf="@+id/clear" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputCurrent"
        android:layout_width="@dimen/textViewWidth"
        android:layout_height="wrap_content"
        android:hint=""
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputNext" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputNext"
        android:layout_width="@dimen/textViewWidth"
        android:layout_height="wrap_content"
        android:hint=""
        app:layout_constraintBottom_toTopOf="@+id/textInputCurrent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />


</androidx.constraintlayout.widget.ConstraintLayout>